<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/GPATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/gpa_calculator"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/CAGGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_cag_grade"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/ButtonEnterGPA"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:text="@string/enter"
            app:backgroundTint="#A3A3A3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonUndo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/undo"
            app:backgroundTint="#A3A3A3" />

        <Button
            android:id="@+id/ButtonReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            app:backgroundTint="#A3A3A3" />
    </LinearLayout>

    <Button
        android:id="@+id/ButtonShowGPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_gpa"
        app:backgroundTint="#A3A3A3" />

    <TextView
        android:id="@+id/DisplayGPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>